--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -1,16 +1,14 @@
 /* Write your CSS here */
 .money-details-con {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .con {
   display: flex;
   align-items: center;
-
   justify-content: center;
-  width: 25%;
+  width: 30%;
   height: 120px;
-
   border-radius: 10px;
 }
 .con-1 {
@@ -22,13 +20,13 @@
   border: 1px solid #06b6d4;
 }
 
-.con-2 {
+.con-3 {
   background-color: #ede9fe;
   border: 1px solid #7c3aed;
 }
 .money-imgs {
-  width: 80px;
-  height: 80px;
+  width: 60px;
+  height: 60px;
   margin-right: 20px;
 }
 
@@ -38,14 +36,14 @@
   font-family: 'Roboto';
   color: #7e858e;
   margin-top: 0px;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: 500;
-  margin-bottom: 5px;
+  margin-bottom: 6px;
 }
 .money-dtls-amt {
   font-family: 'Roboto';
   color: #334155;
-  font-size: 28px;
+  font-size: 25px;
   margin-bottom: 0;
-  margin-top: 5px;
+  margin-top: 6px;
 }
