--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -4,6 +4,11 @@
   height: 100vh;
   padding: 30px;
 }
+.main-container {
+  width: 70%;
+  margin: auto;
+  margin-top: 10px;
+}
 .name-con {
   padding: 20px;
   background-image: url(https://assets.ccbp.in/frontend/react-js/money-manager/money-manager-bg.png);
@@ -12,7 +17,7 @@
   background-size: cover;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .name {
@@ -30,4 +35,54 @@
 .money-manager {
   color: #0b69ff;
   font-weight: 500;
+}
+
+.add-transaction-con {
+  width: 40%;
+  padding: 20px 30px 20px 30px;
+  border: 1px solid #cbd5e1;
+  border-radius: 10px;
+  margin-top: 30px;
+}
+.add-transaction-heading {
+  font-size: 25px;
+  font-family: 'Roboto';
+  color: #1e293b;
+}
+.label {
+  font-family: 'Roboto';
+  font-size: 16px;
+
+  color: #7e858e;
+}
+.transaction-input {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  height: 35px;
+  border: 1px solid #cbd5e1;
+  border-radius: 5px;
+  width: 100%;
+  outline: none;
+  padding: 5px 10px 5px 10px;
+}
+.select-el {
+  margin-bottom: 20px;
+  width: 100%;
+  height: 35px;
+  margin-top: 10px;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+  border: 1px solid #cbd5e1;
+  outline: none;
+}
+.add-btn {
+  cursor: pointer;
+  width: 60px;
+  height: 30px;
+  background-color: #0b69ff;
+  color: #ffffff;
+  font-family: 'Roboto';
+  border: none;
+
+  border-radius: 5px;
 }
