--- a/src/components/MoneyManager/index.css
+++ b/src/components/MoneyManager/index.css
@@ -9,6 +9,11 @@
   margin: auto;
   margin-top: 10px;
 }
+@media screen and (max-width: 768px) {
+  .main-container {
+    width: 90%;
+  }
+}
 .name-con {
   padding: 20px;
   background-image: url(https://assets.ccbp.in/frontend/react-js/money-manager/money-manager-bg.png);
@@ -19,17 +24,32 @@
   border-bottom-right-radius: 20px;
   margin-bottom: 30px;
 }
+@media screen and (max-width: 768px) {
+  .name-con {
+    text-align: center;
+  }
+}
 
 .name {
   font-family: 'Roboto';
   font-size: 30px;
   color: #475569;
 }
+@media screen and (max-width: 768px) {
+  .name {
+    font-size: 20px;
+  }
+}
 
 .welcome {
   font-family: 'Roboto';
   font-size: 17px;
   color: #475569;
+}
+@media screen and (max-width: 768px) {
+  .welcome {
+    font-size: 14px;
+  }
 }
 
 .money-manager {
@@ -40,12 +60,23 @@
   display: flex;
   justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .form-history-con {
+    flex-direction: column;
+  }
+}
 .add-transaction-con {
   width: 40%;
   padding: 20px 30px 20px 30px;
   border: 1px solid #cbd5e1;
   border-radius: 10px;
   margin-top: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .add-transaction-con {
+    width: 100%;
+  }
 }
 .add-transaction-heading {
   font-size: 25px;
@@ -54,8 +85,7 @@
 }
 .label {
   font-family: 'Roboto';
-  font-size: 16px;
-
+  font-size: 13px;
   color: #7e858e;
 }
 .transaction-input {
@@ -67,6 +97,7 @@
   width: 100%;
   outline: none;
   padding: 5px 10px 5px 10px;
+  font-family: 'Roboto';
 }
 .select-el {
   margin-bottom: 20px;
@@ -86,6 +117,43 @@
   color: #ffffff;
   font-family: 'Roboto';
   border: none;
-
   border-radius: 5px;
+}
+
+.history-heading-con {
+  width: 50%;
+  border: 1px solid #cbd5e1;
+  margin-top: 30px;
+  padding: 20px 30px 20px 30px;
+}
+@media screen and (max-width: 768px) {
+  .history-heading-con {
+    width: 100%;
+  }
+}
+.history-con {
+  display: flex;
+  align-items: center;
+  border: 1px solid #cbd5e1;
+  padding-left: 15px;
+  margin-bottom: 0;
+}
+.history-heading {
+  font-family: 'Roboto';
+  font-size: 25px;
+}
+.headings {
+  width: 30%;
+  font-family: 'Roboto';
+  font-size: 15px;
+}
+@media screen and (max-width: 768px) {
+  .headings {
+    font-size: 12px;
+  }
+}
+.ul-con {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 0;
 }
