--- a/src/components/MoneyDetails/index.css
+++ b/src/components/MoneyDetails/index.css
@@ -3,6 +3,13 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .money-details-con {
+    flex-direction: column;
+    width: 100%;
+  }
+}
 .con {
   display: flex;
   align-items: center;
@@ -11,6 +18,15 @@
   height: 120px;
   border-radius: 10px;
 }
+@media screen and (max-width: 768px) {
+  .con {
+    width: 100%;
+    justify-content: start;
+    padding-left: 30px;
+    margin-bottom: 20px;
+  }
+}
+
 .con-1 {
   background-color: #ecfccb;
   border: 1px solid #84cc16;
@@ -46,4 +62,9 @@
   font-size: 25px;
   margin-bottom: 0;
   margin-top: 6px;
+}
+@media screen and (max-width: 768px) {
+  .money-details-amt {
+    font-size: 22px;
+  }
 }
