--- a/src/components/TransactionItem/index.css
+++ b/src/components/TransactionItem/index.css
@@ -1,31 +1,5 @@
 /* Write your CSS here */
-.history-heading-con {
-  width: 50%;
-  border: 1px solid #cbd5e1;
-  margin-top: 30px;
-  padding: 20px 30px 20px 30px;
-}
-.history-con {
-  display: flex;
-  align-items: center;
-  border: 1px solid #cbd5e1;
-  padding-left: 15px;
-  margin-bottom: 0;
-}
-.history-heading {
-  font-family: 'Roboto';
-  font-size: 25px;
-}
-.headings {
-  width: 30%;
-  font-family: 'Roboto';
-  font-size: 15px;
-}
-.ul-con {
-  list-style-type: none;
-  padding: 0;
-  margin-top: 0;
-}
+
 .li-con {
   display: flex;
   align-items: center;
@@ -37,6 +11,11 @@
   font-size: 14px;
   font-family: 'Roboto';
   color: #334155;
+}
+@media screen and (max-width: 768px) {
+  .li-para {
+    font-size: 13px;
+  }
 }
 .del-btn {
   background-color: transparent;
